# DocumentProcessRAG

./: .env.sample  .gitignore  README.md  pyproject.toml
Notebooks/: RAG_basic.ipynb  RAG_retrival.ipynb  history_aware_generation.ipynb
Scripts/: prepare_data.py
docs/: Google.txt  Microsoft.txt  Nvidia.txt  SpaceX.txt  Tesla.txt
src/: ingestion_pipline.py  main.py  retrieval_pipeline.py
src/core/: llm.py  llm_message.py
